# random-stuff

./: .gitignore  README.md  apkpure_api.py  canvas.py  combine_episodes.py  downloadstation.py  dreamemap.py  find_apkpure_links.py  hot.py  imap_pdf_downloader.py  internetdisruptions.py  nonogram_life.py  paperless.py  pyproject.toml  requirements.txt  spusu.py  valetudo_mqtt.py  valetudomap.py
daily_notes/: compose.yaml  daily_notes.py  sleep_cal.py  submit_day.py
daily_notes/src/: Dockerfile  crontab  daily_notes.py  download_2024.py  requirements.txt  sleep_cal.py  submit_day.py  watchtime.py
ha-energy-corrector/: prepare_data.py
